@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.5.1
 ====================================
+- [#44] Fix bug with login validator, &validate parameter
 - [#40] Fix issue with syncUsername in UpdateProfile
 - [#42] Respect allow_multiple_emails setting that prevents users with same email addresses
 - [#43] Add workaround for xPDO bug with NULL fields in modUserProfile
